# advent-of-code-2024-in-rust

./: .gitignore  Cargo.toml  README.md  bacon.toml
.cargo/: config.toml
src/: graph.rs  grid.rs  lib.rs  parse_regex.rs
