[package]
name = "advent-of-code-2024-in-rust"
version = "0.1.0"
edition = "2021"

# Specify a default binary to run if no --bin is specified
default-run = "day_02"

[dependencies]
itertools = "0.14.0"
ndarray = "0.16.1"
regex = "1.11.1"
# ndarray = "0.16.1"
# regex = "1.11.0"

# [profile.release]
# debug = true
